--- a/src/apps/1688Web/components/slider/index.pug
+++ b/src/apps/1688Web/components/slider/index.pug
@@ -1,17 +1,2 @@
 .abs-container.abs-hp-2of5.first-margin
-    .abs-content.carousel
-        .item
-            .item-bg
-                img(src = IMG_DIR + "slider_1.jpg")
-        .item
-            .item-bg
-                img(src = IMG_DIR + "slider_2.jpg")
-        .item
-            .item-bg
-                img(src = IMG_DIR + "slider_3.jpg")
-        .item
-            .item-bg
-                img(src = IMG_DIR + "slider_4.jpg")
-        .item
-            .item-bg
-                img(src = IMG_DIR + "slider_5.jpg")
+    .abs-content.carousel#main_slider
