--- a/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
+++ b/src/apps/1688Web/webapp/stylus/bs-overwrite.styl
@@ -67,3 +67,14 @@ $CONTAINER_SM = 560px
         width $CONTAINER_WD
     @media (min-width $SCREEN_LG)
         width $CONTAINER_LG
+
+.desktop
+    .container
+        @media (min-width $SCREEN_SM)
+            width $CONTAINER_MD
+        @media (min-width $SCREEN_MD)
+            width $CONTAINER_MD
+        @media (min-width $SCREEN_WD)
+            width $CONTAINER_WD
+        @media (min-width $SCREEN_LG)
+            width $CONTAINER_LG
