--- a/src/apps/1688Web/components/slider/index.bak.styl
+++ b/src/apps/1688Web/components/slider/index.bak.styl
@@ -22,14 +22,8 @@ PITEM_HEIGHT_ACTIVE_MD = 0.04rem
 PITEM_HEIGHT_ACTIVE_SM = 0.03rem
 PITEM_HEIGHT_ACTIVE_XS = 0.02rem
 
-PITEM_COLOR = WHITE
-//PITEM_COLOR_ACTIVE = BLUE_EBONYCLAY
-PITEM_COLOR_ACTIVE = THEME_COLOR
-PITEM_HOVER_COLOR = lighten(PITEM_COLOR_ACTIVE, 85%)
-PITEM_FCOLOR = GRAY_66
-PITEM_FCOLOR_ACTIVE = WHITE
-PITEM_TIMER_BGC = darken(PITEM_COLOR_ACTIVE,15%)
-PITEM_DIVIDER_BGC = lighten(PITEM_COLOR_ACTIVE, 85%)
+PITEM_COLOR = lighten(THEME_COLOR,20%)
+PITEM_COLOR_ACTIVE = BLUE_EBONYCLAY
 
 
 
@@ -117,24 +111,22 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
             overflow hidden
             .slider-pagination-timer
                 width 0%
-                //height 0.03rem
-                background-color PITEM_TIMER_BGC
+                height 0.03rem
+                background-color YELLOW_CASABLANCA
                 position absolute
                 bottom 0
-                top 0
-                z-index 1
+                z-index 999
                 display none
             .slider-pagination-divider
                 position absolute
                 width 1px
                 right 0
-                background-color PITEM_DIVIDER_BGC
-                top 0
-                bottom 0
+                background-color lighten(PITEM_COLOR, 30%)
+                top 2*PITEM_HEIGHT_ACTIVE_WD
+                bottom 2*PITEM_HEIGHT_ACTIVE_WD
                 display block
             .slider-pagination-content
                 position absolute
-                z-index 2
                 left 3*PITEM_HEIGHT_ACTIVE_WD
                 top 3*PITEM_HEIGHT_ACTIVE_WD
                 right 3*PITEM_HEIGHT_ACTIVE_WD
@@ -143,20 +135,20 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                     word-wrap break-word
                     word-break break-all
                     font-size PITEM_TITLE_FSIZE_WD
-                    color PITEM_FCOLOR
+                    color WHITE
                     text-align left
                 .slider-pagination-info
                     word-wrap break-word
                     word-break break-all
                     display none
                     font-size PITEM_INFO_FSIZE_WD
-                    color alpha(PITEM_FCOLOR, 0.7)
+                    color alpha(WHITE, 0.7)
                     text-align left
                     line-height 1.1
             &.active
                 width 33.33333333%
-                //height PITEM_HEIGHT_WD + PITEM_HEIGHT_ACTIVE_WD
-                //margin-top -1*PITEM_HEIGHT_ACTIVE_WD
+                height PITEM_HEIGHT_WD + PITEM_HEIGHT_ACTIVE_WD
+                margin-top -1*PITEM_HEIGHT_ACTIVE_WD
                 background-color PITEM_COLOR_ACTIVE
                 border-right none
                 cursor default
@@ -172,10 +164,8 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                         word-break normal
                         word-wrap normal
                         overflow hidden
-                        color PITEM_FCOLOR_ACTIVE
                     .slider-pagination-info
                         display block
-                        color alpha(PITEM_FCOLOR_ACTIVE, 0.7)
                         
     &:hover
         .navi-prev
@@ -199,9 +189,9 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                         font-size PITEM_TITLE_FSIZE_SM
                     .slider-pagination-info
                         font-size PITEM_INFO_FSIZE_SM
-                //&.active
-                    //margin-top -1*PITEM_HEIGHT_ACTIVE_SM
-                    //height PITEM_HEIGHT_SM + PITEM_HEIGHT_ACTIVE_SM
+                &.active
+                    margin-top -1*PITEM_HEIGHT_ACTIVE_SM
+                    height PITEM_HEIGHT_SM + PITEM_HEIGHT_ACTIVE_SM
 @media (min-width $SCREEN_MD)
     .first-margin
         margin-bottom 0.5*PITEM_HEIGHT_MD + SLIDER_BOTTOM_SPACE
@@ -219,9 +209,9 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                         font-size PITEM_TITLE_FSIZE_MD
                     .slider-pagination-info
                         font-size PITEM_INFO_FSIZE_MD
-                //&.active
-                    //height PITEM_HEIGHT_MD + PITEM_HEIGHT_ACTIVE_MD
-                    //margin-top -1*PITEM_HEIGHT_ACTIVE_MD
+                &.active
+                    height PITEM_HEIGHT_MD + PITEM_HEIGHT_ACTIVE_MD
+                    margin-top -1*PITEM_HEIGHT_ACTIVE_MD
 @media (min-width $SCREEN_WD)
     .first-margin
         margin-bottom 0.5*PITEM_HEIGHT_WD + SLIDER_BOTTOM_SPACE
@@ -240,9 +230,9 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                     .slider-pagination-info
                         line-height 1.4
                         font-size PITEM_INFO_FSIZE_WD
-                //&.active
-                    //height PITEM_HEIGHT_WD + PITEM_HEIGHT_ACTIVE_WD
-                    //margin-top -1*PITEM_HEIGHT_ACTIVE_WD
+                &.active
+                    height PITEM_HEIGHT_WD + PITEM_HEIGHT_ACTIVE_WD
+                    margin-top -1*PITEM_HEIGHT_ACTIVE_WD
 @media (min-width $SCREEN_LG)
     .first-margin
         margin-bottom 0.5*PITEM_HEIGHT_LG + SLIDER_BOTTOM_SPACE
@@ -262,9 +252,9 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                     .slider-pagination-info
                         line-height 1.4
                         font-size PITEM_INFO_FSIZE_LG
-                //&.active
-                    //height PITEM_HEIGHT_LG + PITEM_HEIGHT_ACTIVE_LG
-                    //margin-top -1*PITEM_HEIGHT_ACTIVE_LG
+                &.active
+                    height PITEM_HEIGHT_LG + PITEM_HEIGHT_ACTIVE_LG
+                    margin-top -1*PITEM_HEIGHT_ACTIVE_LG
 
 .mobile
     .first-margin
@@ -281,6 +271,8 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                     height 0.015rem
                 .slider-pagination-divider
                     transform scaleX(0.5)
+                    top 2*PITEM_HEIGHT_ACTIVE_XS
+                    bottom 2*PITEM_HEIGHT_ACTIVE_XS
                 .slider-pagination-content
                     left 3*PITEM_HEIGHT_ACTIVE_XS
                     top 3*PITEM_HEIGHT_ACTIVE_XS
@@ -293,8 +285,8 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
                     .slider-pagination-info
                         font-size PITEM_INFO_FSIZE_XS
                 &.active
-                    //height PITEM_HEIGHT_XS + PITEM_HEIGHT_ACTIVE_XS
-                    //margin-top -1*PITEM_HEIGHT_ACTIVE_XS
+                    height PITEM_HEIGHT_XS + PITEM_HEIGHT_ACTIVE_XS
+                    margin-top -1*PITEM_HEIGHT_ACTIVE_XS
                     .slider-pagination-divider
                         display none
 
@@ -302,9 +294,9 @@ SLIDER_BOTTOM_SPACE_XS = 0.08rem
     .carousel
         .slider-pagination
             .slider-pagination-item:hover
-                background-color PITEM_HOVER_COLOR
+                background-color THEME_COLOR
                 &.active
-                    background-color PITEM_COLOR_ACTIVE
+                    background-color BLUE_EBONYCLAY
 
 .wait-in
     transform translateX(100%)
