--- a/src/apps/1688Web/webapp/stylus/index.styl
+++ b/src/apps/1688Web/webapp/stylus/index.styl
@@ -3,6 +3,7 @@
 @require 'variables'
 @require 'utils'
 @require 'bs-overwrite'
+@require 'iscroll'
 
 
 a
@@ -16,6 +17,7 @@ ul
 html
     -webkit-text-size-adjust none
     font-size 100px //1rem = 100px...1px=0.01rem
+    height 100%
 
 body
     font-size 0.14rem//14px
@@ -25,95 +27,63 @@ body
     -webkit-font-smoothing antialiased
     -moz-osx-font-smoothing grayscale
     -webkit-tap-highlight-color rgba(255,255,255,0) //使移动端点击区域透明
+    height 100%
 
 .main-content
     width 100%
     height auto
+    min-height 100%
     display block
     overflow hidden
     position relative
     background-color BODY_BG
     z-index 1
+.main-body
+    width 100%
+    height auto
+    min-height 100%
+    position static
+    transition transform COMMON_ANIM_TIME ease-in-out
+.body-mask
+    position fixed
+    top 0
+    right 0
+    bottom 0
+    left 0
+    background-color alpha(BLACK, 0.5)
+    z-index Z_INDEX_MASK
+    display none
+
 .desktop
     .main-content
-        min-width 9.7rem
-        min-height 4rem
-.top-container
-    position absolute
-    left 0
-    top 0
-    right 0
-    height TOP_HEIGHT
-    z-index Z_INDEX_TOP
-.left-container
-    position absolute
-    width LEFT_WIDTH
-    top TOP_HEIGHT
-    bottom 0px
-    left 0px
-    z-index Z_INDEX_LEFT
-.mobile-menu-mask
-    position absolute
-    top 0
-    right 0
-    bottom 0
-    left 0
-    background-color alpha(black, 0.3)
-    z-index Z_INDEX_LEFT_MOBILE - 10
-    display none
-.right-container
-    position absolute
-    left LEFT_WIDTH
-    top TOP_HEIGHT
-    display block
-    font-size 0
-    bottom 0
-    right 0px
-    z-index Z_INDEX_RIGHT
-    -webkit-overflow-scrolling touch 
-    overflow auto
-.footer-container
-    position absolute
-    left LEFT_WIDTH
-    right 0px
-    bottom 0px
-    height FOOTER_HEIGHT
-    z-index Z_INDEX_FOOTER
+        min-width DESKTOP_MIN_WIDTH
+        min-height DESKTOP_MIN_HEIGHT
+
+.tablet
+    .showmenu
+        .main-body
+        .topbar
+            transform translate3D(MENU_WIDTH_TABLET, 0, 0)
+        .body-mask
+            display block
 
 .mobile
-    .top-container
-        height TOP_HEIGHT_MOBILE
-    .left-container
-        transition left ease-in-out COMMON_ANIM_TIME
-        top 0
-        width LEFT_WIDTH_MOBILE
-        left -1*LEFT_WIDTH_MOBILE
-        z-index Z_INDEX_LEFT_MOBILE
-        &.show
-            left 0
-    .mobile-menu-mask
-        display none
-        &.show
+    .showmenu
+        .main-body
+        .topbar
+            transform translate3D(MENU_WIDTH_MOBILE, 0, 0)
+        .body-mask
             display block
-    .right-container
-        top TOP_HEIGHT_MOBILE  
-        left 0  
 
-.main-iframe
-    width 100%
-    height 100%
+.iscroller
+    -webkit-tap-highlight-color rgba(0,0,0,0)
+    -webkit-text-size-adjust none
+    -moz-text-size-adjust none
+    -ms-text-size-adjust none
+    -o-text-size-adjust none
+    text-size-adjust none
 
 
-.border-round
-    border-radius COMMON_BORDER_RADIUS !important
-    .text-slider-item
-        border-radius COMMON_BORDER_RADIUS !important
-.border-round2x
-    border-radius 2*COMMON_BORDER_RADIUS !important
-    .text-slider-item
-        border-radius 2*COMMON_BORDER_RADIUS !important
-.has-shadow
-    box-shadow 0 0 0.05rem 0.03rem alpha(BLACK,0.02) !important
 
 
 //计算row 和col 间距
@@ -196,8 +166,6 @@ for i in (1..10)
             .abs-hp-mobile-{i}of{j}
                 &:before
                     cacuHeightPct(i,j)
-
-
 
 
 @require '../../components/topbar/index'
