--- a/src/apps/1688Web/webapp/stylus/variables.styl
+++ b/src/apps/1688Web/webapp/stylus/variables.styl
@@ -8,7 +8,7 @@ COMMON_BORDER_RADIUS = 2px // common border redius
 IMG_DIR = '../images/'
 FONT_DIR = '../fonts/'
 
-BODY_BG = WHITE
+BODY_BG = GRAY_F0
 DEFAULT_SPACE = $default-space//0.08rem
 COMMON_BORDER_COLOR = GRAY_F9
 COMMON_BORDER_WIDTH = 1px
@@ -19,16 +19,18 @@ COMMON_LINE_HEIGHT = (20 / 14)
 THEME_COLOR = BLUE_OCEAN
 
 //layout
-TOP_HEIGHT = 0.6rem
-TOP_HEIGHT_MOBILE = 0.48rem
-LEFT_WIDTH = 2rem
-LEFT_WIDTH_MOBILE = 2.3rem
+DESKTOP_MIN_WIDTH = 10rem
+DESKTOP_MIN_HEIGHT = 4rem
+
+TOP_HEIGHT = 0.8rem
+TOP_HEIGHT_MOBILE = 0.44rem
+
+MENU_WIDTH_MOBILE = 2.5rem
+MENU_WIDTH_TABLET = 2.5rem
+
 FOOTER_HEIGHT = 0.3rem
 Z_INDEX_TOP = 300
-Z_INDEX_LEFT = 200
-Z_INDEX_LEFT_MOBILE = 400
-Z_INDEX_FOOTER = 100
-Z_INDEX_RIGHT = 1
+Z_INDEX_MASK = 400
 
 // media query vars
 //-----------------------------------------------------------------------------------------
