1688Web : index news finished

--- a/src/apps/1688Web/components/topbar/index.styl
+++ b/src/apps/1688Web/components/topbar/index.styl
@@ -38,7 +38,7 @@ SUBMENU_SPACE = 0.04rem
     left 0
     right 0
     z-index Z_INDEX_TOP
-    transition transform COMMON_ANIM_TIME ease-in-out
+    transition all COMMON_ANIM_TIME ease-in-out
     .topbar-content
         position relative
         width auto
