--- a/src/apps/1688Web/webapp/stylus/variables.styl
+++ b/src/apps/1688Web/webapp/stylus/variables.styl
@@ -1,7 +1,7 @@
 /* variables */
 
 // basic vars
-BODY_FONT_SIZE = 20px
+BODY_FONT_SIZE = 100px
 COMMON_ANIM_TIME = 0.2s // common transition time
 COMMON_BORDER_RADIUS = 2px // common border redius
 
@@ -27,6 +27,9 @@ TOP_HEIGHT_MOBILE = 0.44rem
 
 MENU_WIDTH_MOBILE = 2.5rem
 MENU_WIDTH_TABLET = 2.5rem
+
+INDEX_SPACE = 0.4rem
+INDEX_SPACE_MOBILE = 0.08rem
 
 FOOTER_HEIGHT = 0.3rem
 Z_INDEX_TOP = 300
