1688Web : almost finished

--- a/src/apps/1688Web/components/footer/index.styl
+++ b/src/apps/1688Web/components/footer/index.styl
@@ -4,4 +4,9 @@ FOOTER_BGC = BLUE_EBONYCLAY
     width 100%
     margin-top INDEX_SPACE
     background-color FOOTER_BGC
-    min-height 5rem
+    min-height 2rem
+
+.mobile
+    .footer
+        margin-top INDEX_SPACE_MOBILE
+        min-height 1rem
