--- a/src/apps/1688Web/webapp/stylus/color.styl
+++ b/src/apps/1688Web/webapp/stylus/color.styl
@@ -21,8 +21,10 @@ GRAY_D6 = #D6D6D6
 GRAY_CC = #CCCCCC
 GRAY_BB = #BBBBBB
 GRAY_AA = #AAAAAA
-GRAY_99 = #999999
 GRAY_9B = #9B9B9B
+GRAY_99 = #999999
+GRAY_88 = #888888
+GRAY_77 = #777777
 GRAY_66 = #666666
 GRAY_5A = #5A5A5A
 GRAY_33 = #333333
@@ -47,6 +49,7 @@ GREEN_GRASS = #09be00
 
 // red
 RED = #cb5a5e
+RED_LIGHT = #fe6a6c
 RED_PINK = #e08283
 RED_SUNGLO = #e26a6a
 RED_INTENSE = #e35b5a
