--- a/src/apps/1688Web/components/features/features_2.pug
+++ b/src/apps/1688Web/components/features/features_2.pug
@@ -1,40 +1,40 @@
 .features-title.scroll-anim.anim-fly-up
     .ft-head
-        .ft-head-box 创业服务
+        .ft-head-box 资源服务
     .ft-body 
-        |园区提供全方位创业服务，通过众创空间孵化众多创业项目，配备经验丰富的资深创业导师，提供创业辅导、创业扶持、创业路演等各项服务
+        |专业团队提供政策支持和产业支持、金融支持，并提供特色增值、融资、财税、人力资源、管理咨询、法律、专利和培训等多方位优质服务
         .ft-deco.ft-deco-left
         .ft-deco.ft-deco-right
 .row.fitem-container
     .col-xs-3.scroll-anim.anim-fly-up
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-jiangbei
-            .fitem-title 创业成果
+            i.iconfont.icon-rongzi
+            .fitem-title 融资服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-kongjian
-            .fitem-title 众创空间
+            i.iconfont.icon-caishui
+            .fitem-title 财税服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-fudao
-            .fitem-title 创业辅导
+            i.iconfont.icon-hr
+            .fitem-title 人力资源
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-daoshi
-            .fitem-title 创业导师
+            i.iconfont.icon-zixun
+            .fitem-title 管理咨询
     .col-xs-3.scroll-anim.anim-fly-up
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-peixun2
-            .fitem-title 创业培训
+            i.iconfont.icon-falv
+            .fitem-title 法律服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-200ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-luyan
-            .fitem-title 创业路演
+            i.iconfont.icon-zhuanli
+            .fitem-title 专利服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-400ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-fuchi
-            .fitem-title 创业扶持
+            i.iconfont.icon-peixun
+            .fitem-title 培训服务
     .col-xs-3.scroll-anim.anim-fly-up.trans-delay-600ms
         a.fitem.touch-active(href="javascript:;")
-            i.iconfont.icon-gengduo
-            .fitem-title 期待更多
+            i.iconfont.icon-qita
+            .fitem-title 其他服务
