--- a/src/apps/1688Web/components/topbar/index.pug
+++ b/src/apps/1688Web/components/topbar/index.pug
@@ -1,53 +1,53 @@
 .topbar
-    .container
-        .topbar-content
-            a.logo(href="index.html")
-                img(src = IMG_DIR + 'logo-white.png')
-            .menu#menu
-                .iscroller
-                    .rootmenu
-                        .menu-btn.sel 首页
-                    .rootmenu
-                        .menu-btn 资讯
-                        .submenu
-                            .submenu-btn 行业资讯
-                            .submenu-btn 园区新闻
-                            .submenu-btn 通知公告
-                            .submenu-btn 政策法规
-                    .rootmenu
-                        .menu-btn 企业
-                    .rootmenu
-                        .menu-btn 招商
-                    .rootmenu
-                        .menu-btn 资源
-                        .submenu
-                            .submenu-btn 融资服务
-                            .submenu-btn 财税服务
-                            .submenu-btn 人力资源
-                            .submenu-btn 管理咨询
-                            .submenu-btn 法律服务
-                            .submenu-btn 专利服务
-                            .submenu-btn 培训服务
-                    .rootmenu
-                        .menu-btn 创业
-                        .submenu
-                            .submenu-btn 创业成果
-                            .submenu-btn 众创空间
-                            .submenu-btn 创业辅导
-                            .submenu-btn 创业导师
-                            .submenu-btn 创业培训
-                            .submenu-btn 创业路演
-                            .submenu-btn 创业扶持
-                    .rootmenu
-                        .menu-btn 更多
-                        .submenu
-                            .submenu-btn 用户中心
-                            .submenu-btn 关于我们
-                            .submenu-btn 生活
-                            .submenu-btn 党团
-            .user-area
-                .btn.user-area-btn.login 登录
-                .btn.user-area-btn.regist 注册
-            .mbtn.touch-active#mbtn
-                i.fa.fa-navicon
+    .topbar-content
+        a.logo(href="index.html")
+            img(src = IMG_DIR + 'logo-white.png')
+        .menu#menu
+            .iscroller
+                .rootmenu
+                    .menu-btn.sel 首页
+                .rootmenu
+                    .menu-btn 资讯
+                    .submenu
+                        .submenu-btn 行业资讯
+                        .submenu-btn 园区新闻
+                        .submenu-btn 通知公告
+                        .submenu-btn 政策法规
+                .rootmenu
+                    .menu-btn 企业
+                .rootmenu
+                    .menu-btn 招商
+                .rootmenu
+                    .menu-btn 资源
+                    .submenu
+                        .submenu-btn 融资服务
+                        .submenu-btn 财税服务
+                        .submenu-btn 人力资源
+                        .submenu-btn 管理咨询
+                        .submenu-btn 法律服务
+                        .submenu-btn 专利服务
+                        .submenu-btn 培训服务
+                .rootmenu
+                    .menu-btn 创业
+                    .submenu
+                        .submenu-btn 创业成果
+                        .submenu-btn 众创空间
+                        .submenu-btn 创业辅导
+                        .submenu-btn 创业导师
+                        .submenu-btn 创业培训
+                        .submenu-btn 创业路演
+                        .submenu-btn 创业扶持
+                .rootmenu
+                    .menu-btn 用户
+                .rootmenu
+                    .menu-btn 我们
+                .rootmenu
+                    .menu-btn 生活
+                .rootmenu
+                    .menu-btn 党团
+        .user-area
+            .btn.user-area-btn.login 登录
+            .btn.user-area-btn.regist 注册
+        .mbtn.touch-active#mbtn
+            i.fa.fa-navicon
 
