--- a/src/apps/1688Web/webapp/stylus/iconfont.styl
+++ b/src/apps/1688Web/webapp/stylus/iconfont.styl
@@ -9,21 +9,36 @@
   font-size inherit
   font-style normal
   -webkit-font-smoothing  antialiased
-  -webkit-text-stroke-width  0.2px
   -moz-osx-font-smoothing  grayscale
 
-.icon-return-arrow:before { content: "\e61d"; }
+.icon-zixun:before { content: "\e600"; }
 
-.icon-return:before { content: "\e654"; }
+.icon-hr:before { content: "\e79d"; }
 
-.icon-arrow-left:before { content: "\e656"; }
+.icon-falv:before { content: "\e627"; }
 
-.icon-more:before { content: "\e65c"; }
+.icon-gengduo:before { content: "\e609"; }
 
-.icon-arrow-right:before { content: "\e65e"; }
+.icon-fuchi:before { content: "\e608"; }
 
-.icon-news:before { content: "\e667"; }
+.icon-luyan:before { content: "\e696"; }
 
-.icon-book:before { content: "\e66c"; }
+.icon-jiangbei:before { content: "\e601"; }
 
-.icon-building:before { content: "\e6b2"; }
+.icon-caishui:before { content: "\e60a"; }
+
+.icon-daoshi:before { content: "\e652"; }
+
+.icon-kongjian:before { content: "\e607"; }
+
+.icon-peixun2:before { content: "\e602"; }
+
+.icon-rongzi:before { content: "\e649"; }
+
+.icon-fudao:before { content: "\e6b5"; }
+
+.icon-peixun:before { content: "\e60b"; }
+
+.icon-zhuanli:before { content: "\e689"; }
+
+.icon-qita:before { content: "\e603"; }
